bugfix after DataSource URI refactoring
git-svn-id: https://svn.code.sf.net/p/autoplot/code/autoplot/trunk@3172 0c594bb0-8543-0410-a25e-d8ec440261db